--- a/news.html
+++ b/news.html
@@ -58,11 +58,11 @@
 		     <div class="col-lg-6">
               <article class="article card bg-transparent h-100">
                 <div class="card-body p-0 position-relative">
-                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="/news/page1.html">Новости 27/11/2022</a></div>
+                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="news/page1.html" target="_blank">Новости 27/11/2022</a></div>
                   <span class="d-block my-3"> </span>
-                  <h3 class="h3"><a class="blog-title" href="/news/page1.html" title="Читать новость полностью">Мы получили грант</a></h3>
+                  <h3 class="h3"><a class="blog-title" href="news/page1.html" target="_blank" title="Читать новость полностью">Мы получили грант</a></h3>
                 </div>
-                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="/news/page1.html">Прочитать новость
+                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="news/page1.html" target="_blank">Прочитать новость
                   <svg class="ms-1" width="22" height="11" viewBox="0 0 16 8" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.3536 4.35355c.1952-.19526.1952-.51184.0-.7071L12.1716.464467C11.9763.269205 11.6597.269205 11.4645.464467c-.1953.195262-.1953.511845.0.707103L14.2929 4 11.4645 6.82843c-.1953.19526-.1953.51184.0.7071C11.6597 7.7308 11.9763 7.7308 12.1716 7.53553l3.182-3.18198zM-.437114e-7 4.5H15v-1H.437114e-7l-.874228e-7 1z"/>
                   </svg>
@@ -73,11 +73,11 @@
 			  		     <div class="col-lg-6">
               <article class="article card bg-transparent h-100">
                 <div class="card-body p-0 position-relative">
-                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="/news/page2.html">Новости 08/12/2022</a></div>
+                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="news/page2.html" target="_blank">Новости 08/12/2022</a></div>
                   <span class="d-block my-3"> </span>
-                  <h3 class="h3"><a class="blog-title" href="/news/page2.html" title="Читать новость полностью">Начало положено. Проект стартовал!</a></h3>
+                  <h3 class="h3"><a class="blog-title" href="news/page2.html"  target="_blank" title="Читать новость полностью">Начало положено. Проект стартовал!</a></h3>
                 </div>
-                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="/news/page2.html">Прочитать новость
+                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="news/page2.html"  target="_blank">Прочитать новость
                   <svg class="ms-1" width="22" height="11" viewBox="0 0 16 8" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.3536 4.35355c.1952-.19526.1952-.51184.0-.7071L12.1716.464467C11.9763.269205 11.6597.269205 11.4645.464467c-.1953.195262-.1953.511845.0.707103L14.2929 4 11.4645 6.82843c-.1953.19526-.1953.51184.0.7071C11.6597 7.7308 11.9763 7.7308 12.1716 7.53553l3.182-3.18198zM-.437114e-7 4.5H15v-1H.437114e-7l-.874228e-7 1z"/>
                   </svg>
@@ -88,11 +88,11 @@
 		  		     <div class="col-lg-6">
               <article class="article card bg-transparent h-100">
                 <div class="card-body p-0 position-relative">
-                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="/news/page3.html">Новости 15/01/2023</a></div>
+                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="news/page3.html"  target="_blank">Новости 15/01/2023</a></div>
                   <span class="d-block my-3"> </span>
-                  <h3 class="h3"><a class="blog-title" href="/news/page3.html" title="Читать новость полностью">Наработки</a></h3>
+                  <h3 class="h3"><a class="blog-title" href="news/page3.html"  target="_blank" title="Читать новость полностью">Наработки</a></h3>
                 </div>
-                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="/news/page3.html">Прочитать новость
+                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="news/page3.html" target="_blank">Прочитать новость
                   <svg class="ms-1" width="22" height="11" viewBox="0 0 16 8" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.3536 4.35355c.1952-.19526.1952-.51184.0-.7071L12.1716.464467C11.9763.269205 11.6597.269205 11.4645.464467c-.1953.195262-.1953.511845.0.707103L14.2929 4 11.4645 6.82843c-.1953.19526-.1953.51184.0.7071C11.6597 7.7308 11.9763 7.7308 12.1716 7.53553l3.182-3.18198zM-.437114e-7 4.5H15v-1H.437114e-7l-.874228e-7 1z"/>
                   </svg>
@@ -103,11 +103,11 @@
 	  		     <div class="col-lg-6">
               <article class="article card bg-transparent h-100">
                 <div class="card-body p-0 position-relative">
-                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="/news/page4.html">Новости 04/03/2023</a></div>
+                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="news/page4.html"  target="_blank">Новости 04/03/2023</a></div>
                   <span class="d-block my-3"> </span>
-                  <h3 class="h3"><a class="blog-title" href="/news/page4.html" title="Читать новость полностью">Завершена разработка требований</a></h3>
+                  <h3 class="h3"><a class="blog-title" href="news/page4.html"  target="_blank" title="Читать новость полностью">Завершена разработка требований</a></h3>
                 </div>
-                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="/news/page4.html">Прочитать новость
+                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="news/page4.html"  target="_blank">Прочитать новость
                   <svg class="ms-1" width="22" height="11" viewBox="0 0 16 8" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.3536 4.35355c.1952-.19526.1952-.51184.0-.7071L12.1716.464467C11.9763.269205 11.6597.269205 11.4645.464467c-.1953.195262-.1953.511845.0.707103L14.2929 4 11.4645 6.82843c-.1953.19526-.1953.51184.0.7071C11.6597 7.7308 11.9763 7.7308 12.1716 7.53553l3.182-3.18198zM-.437114e-7 4.5H15v-1H.437114e-7l-.874228e-7 1z"/>
                   </svg>
@@ -119,11 +119,11 @@
 	  		     <div class="col-lg-6">
               <article class="article card bg-transparent h-100">
                 <div class="card-body p-0 position-relative">
-                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="/news/page5.html">Новости 11/04/2023</a></div>
+                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="news/page5.html"  target="_blank">Новости 11/04/2023</a></div>
                   <span class="d-block my-3"> </span>
-                  <h3 class="h3"><a class="blog-title" href="/news/page5.html" title="Читать новость полностью">Начата разработка инфраструктуры тестовых стендов</a></h3>
+                  <h3 class="h3"><a class="blog-title" href="news/page5.html"  target="_blank" title="Читать новость полностью">Начата разработка инфраструктуры тестовых стендов</a></h3>
                 </div>
-                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="/news/page5.html">Прочитать новость
+                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="news/page5.html"  target="_blank">Прочитать новость
                   <svg class="ms-1" width="22" height="11" viewBox="0 0 16 8" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.3536 4.35355c.1952-.19526.1952-.51184.0-.7071L12.1716.464467C11.9763.269205 11.6597.269205 11.4645.464467c-.1953.195262-.1953.511845.0.707103L14.2929 4 11.4645 6.82843c-.1953.19526-.1953.51184.0.7071C11.6597 7.7308 11.9763 7.7308 12.1716 7.53553l3.182-3.18198zM-.437114e-7 4.5H15v-1H.437114e-7l-.874228e-7 1z"/>
                   </svg>
@@ -134,11 +134,11 @@
 	  		     <div class="col-lg-6">
               <article class="article card bg-transparent h-100">
                 <div class="card-body p-0 position-relative">
-                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="/news/page6.html">Новости 13/05/2023</a></div>
+                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="news/page6.html"  target="_blank">Новости 13/05/2023</a></div>
                   <span class="d-block my-3"> </span>
-                  <h3 class="h3"><a class="blog-title" href="/news/page6.html" title="Читать новость полностью">Завершение проектирования и разработки тестовых стендов</a></h3>
+                  <h3 class="h3"><a class="blog-title" href="news/page6.html"  target="_blank" title="Читать новость полностью">Завершение проектирования и разработки тестовых стендов</a></h3>
                 </div>
-                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="/news/page6.html">Прочитать новость
+                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="news/page6.html"  target="_blank">Прочитать новость
                   <svg class="ms-1" width="22" height="11" viewBox="0 0 16 8" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.3536 4.35355c.1952-.19526.1952-.51184.0-.7071L12.1716.464467C11.9763.269205 11.6597.269205 11.4645.464467c-.1953.195262-.1953.511845.0.707103L14.2929 4 11.4645 6.82843c-.1953.19526-.1953.51184.0.7071C11.6597 7.7308 11.9763 7.7308 12.1716 7.53553l3.182-3.18198zM-.437114e-7 4.5H15v-1H.437114e-7l-.874228e-7 1z"/>
                   </svg>
@@ -149,12 +149,12 @@
 			  	  		     <div class="col-lg-6">
               <article class="article card bg-transparent h-100">
                 <div class="card-body p-0 position-relative">
-                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="/news/page7.html">Новости 08/06/2023</a></div>
+                  <div class="card-meta d-inline-block"><a class="text-capitalize" style="color:#26caf7" href="news/page7.html"  target="_blank">Новости 08/06/2023</a></div>
                   <span class="d-block my-3"> </span>
-                  <h3 class="h3"><a class="blog-title" a href="/news/page7.html" title="Читать новость полностью">
+                  <h3 class="h3"><a class="blog-title" href="news/page7.html"  target="_blank" title="Читать новость полностью">
 Последние новости. Завершен первый этап проекта</a></h3>
                 </div>
-                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="/news/page7.html">Прочитать новость
+                <div class="card-footer p-0 mt-2 bg-transparent border-0"><a class="line-link" title="Читать новость полностью" href="news/page7.html"  target="_blank">Прочитать новость
                   <svg class="ms-1" width="22" height="11" viewBox="0 0 16 8" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.3536 4.35355c.1952-.19526.1952-.51184.0-.7071L12.1716.464467C11.9763.269205 11.6597.269205 11.4645.464467c-.1953.195262-.1953.511845.0.707103L14.2929 4 11.4645 6.82843c-.1953.19526-.1953.51184.0.7071C11.6597 7.7308 11.9763 7.7308 12.1716 7.53553l3.182-3.18198zM-.437114e-7 4.5H15v-1H.437114e-7l-.874228e-7 1z"/>
                   </svg>
