--- a/news.html
+++ b/news.html
@@ -29,8 +29,8 @@
           <span class="ms-1">MENU</span></button>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="navbar-nav navbar-inline mx-auto">
-        <li class="nav-item active"> <a class="nav-link" href="index.html"><span>Главная</span></a></li>
-        <li class="nav-item opacity-75"> <a class="nav-link" href="news.html"><span>Новости</span></a></li>
+        <li class="nav-item opacity-75"> <a class="nav-link" href="index.html"><span>Главная</span></a></li>
+        <li class="nav-item active"> <a class="nav-link" href="news.html"><span>Новости</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="https://github.com/libdomain/libdomain"><span>Исходный&nbspкод</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="example.html"><span>Примеры&nbspиспользования</span></a></li>
 	    <li class="nav-item opacity-75"> <a class="nav-link" href="docs.html"><span>Документация</span></a></li>
