--- a/newsall.html
+++ b/newsall.html
@@ -29,11 +29,11 @@
           <span class="ms-1">MENU</span></button>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="navbar-nav navbar-inline mx-auto">
-        <li class="nav-item active"> <a class="nav-link" href="index.html"><span>Главная</span></a></li>
+        <li class="nav-item active"> <a class="nav-link"><span>Главная</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="news.html"><span>Новости</span></a></li>
-        <li class="nav-item opacity-75"> <a class="nav-link" href="https://github.com/libdomain/libdomain"><span>Исходный&nbspкод</span></a></li>
+        <li class="nav-item opacity-75"> <a class="nav-link" href="https://github.com/libdomain/libdomain" target="_blank"><span>Исходный&nbspкод</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="example.html"><span>Примеры&nbspиспользования</span></a></li>
-	    <li class="nav-item opacity-75"> <a class="nav-link" href="docs.html"><span>Документация</span></a></li>
+	    <li class="nav-item opacity-75"> <a class="nav-link" href="https://libdomain.github.io/libdomain/files.html" target="_blank"><span>Документация</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="license.html"><span>Лицензия</span></a></li>
 		<li class="nav-item opacity-75"> <a class="nav-link" href="contact.html"><span>Контакты</span></a></li>
         <li class="nav-item translation-nav"> <a class="active" href="index.html"><img src="images/ru.svg" alt="Russian"></a><a href="index-e.html"><img src="images/en.svg" alt="English"></a></li>
