--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,7 @@
                    <p>mail: org@basealt.ru</p>
                    <p>Москва, ул. Бутырская, д. 75</p>
                    <p>ИНН: 7714350892</p>
+                   <p><img src="images/basealt.png" alt=""/></p>
             </blockquote></div>  
 		
 		</div>
@@ -77,17 +78,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-	          	<table width="80%" border="0" align="center">
-  <tbody>
-    <tr>
-      <th scope="col" width="25%" align="center"><img src="images/basealt.png" alt=""/></th>
-      <th scope="col" width="75%"><p>Тел.: +7 (495) 123-47-99<br>
-                    	mail: org@basealt.ru<br>
-                   	 	Москва, ул. Бутырская, д. 75<br>
-                      	ИНН: 7714350892</p></th>
-    </tr>
-  </tbody>
-</table>
+	       
 				<table width="80%" border="0" align="center">
   <tbody>
     <tr>
