--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p class="lead"></p>
 	      <div class="content">
 			     <blockquote>
-                   <p>&nbsp; &nbsp;Libdomain - это открытая библиотека, которая умеет обрабатывать запросы к различным службам каталогов, таких как Microsoft AD, Samba AD, OpenLDAP, FreeIPA. Зная API только одной библиотеки, можно получить доступ ко всем поддерживаемым ею службам каталогов. На текущий момент мы реализовали поддержку OpenLDAP, а к концу 2023 года планируем поддержать Microsoft AD и Samba AD.</p>
+                   <p>&nbsp; &nbsp;Libdomain - это открытая библиотека, которая умеет обрабатывать запросы к различным службам каталогов, таких как Microsoft AD, Samba AD, OpenLDAP, FreeIPA. API библиотеки предоставляет универсальный интерфейс к разным реализациям служб каталогов. На текущий момент мы реализовали поддержку OpenLDAP, а к концу 2023 года планируем поддержать Microsoft AD и Samba AD.</p>
 					   
                    <p>&nbsp; &nbsp;Не нужно писать API под каждую службу каталогов. Достаточно использовать библиотеку libdomain, чтобы разработать продукт, который адаптирован, чтобы управлять любыми доменами или позволяющий мигрировать с одного типа домена на другой. Что особенно актуально в связи с текущей политикой импортозамещения.</p>
                      
