--- a/example.html
+++ b/example.html
@@ -59,10 +59,9 @@
 	      <div class="content">
 			     <blockquote>
     <p>&nbsp;</p>
-                   <p><a href="https://github.com/libdomain/libdomain-qt-test.html" target="_blank">- Пример использования библиотеки libdomain совместно с фреймворком Qt</a></p>
-                   <p><a href="https://github.com/libdomain/libdomain-gtk-test.html" target="_blank">- Пример использования библиотеки libdomain совместно с фреймворком GTK</a></p>
-                   <p><a href="https://github.com/libdomain/libdomain-c-test.html" target="_blank">- Пример использования библиотеки libdomain  на языке C</a></p>
-                   <p><a href="https://github.com/libdomain/libdomain-c#-test.html" target="_blank">- Пример использования библиотеки libdomain  на языке C#</a></p>
+                   <p><a href="https://github.com/libdomain/libdomain-qt-sample" target="_blank">- Пример использования библиотеки libdomain совместно с фреймворком Qt</a></p>
+                   <p><a href="https://github.com/libdomain/libdomain-c-sample" target="_blank">- Пример использования библиотеки libdomain  на языке C</a></p>
+                   <p><a href="https://github.com/libdomain/libdomain-powershell-sample" target="_blank">- Пример использования библиотеки libdomain  на языке C#</a></p>
                    <p>&nbsp;</p>
           </blockquote></div>  
 		 
