--- a/docs.html
+++ b/docs.html
@@ -33,9 +33,9 @@
         <li class="nav-item opacity-75"> <a class="nav-link" href="news.html"><span>Новости</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="https://github.com/libdomain/libdomain" target="_blank"><span>Исходный&nbspкод</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="example.html"><span>Примеры&nbspиспользования</span></a></li>
-	    <li class="nav-item opacity-75"> <a class="nav-link" href="docs.html"><span>Документация</span></a></li>
+	    <li class="nav-item active"> <a class="nav-link"><span>Документация</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="license.html"><span>Лицензия</span></a></li>
-		<li class="nav-item active"> <a class="nav-link"><span>Контакты</span></a></li>
+		<li class="nav-item opacity-75"> <a class="nav-link" href="contact.html"><span>Контакты</span></a></li>
         <li class="nav-item translation-nav"> <a class="active" href="index.html"><img src="images/ru.svg" alt="Russian"></a><a href="english/index.html"><img src="images/en.svg" alt="English"></a></li>
       </ul>
     </div>
@@ -54,20 +54,16 @@
   <section class="section intro-banner">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
+        <div class="col-lg-8 mx-auto text-left">
 <p class="lead"></p>
-	      <div class="content" align="center">
+	      <div class="content">
 			     <blockquote>
-                   <p>Разработка свободной библиотеки ведется&nbsp;</p>
-                   <p>ООО "Базальт Свободное программное обеспечение"</p><br>
-					 
-                   <p>Тел.: +7 (495) 123-47-99</p>
-                   <p>mail: org@basealt.ru</p>
-                   <p>Москва, ул. Бутырская, д. 75</p>
-                   <p>ИНН: 7714350892</p>
-                   <p><img src="images/basealt.png" alt=""/></p>
-            </blockquote></div>  
-		
+    <p>&nbsp;</p>
+                   <p><a href="docs/libdomain.pdf" target="_blank">- Скачать русскоязычную документацию</a></p>
+                   <p><a href="https://libdomain.github.io/libdomain/files.html" target="_blank">- Ознакомиться с англоязычной документацией</a></p>
+                   <p>&nbsp;</p>
+          </blockquote></div>  
+		 
 		</div>
       </div>
     </div>
@@ -78,7 +74,17 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-	       
+	          	<table width="80%" border="0" align="center">
+  <tbody>
+    <tr>
+      <th scope="col" width="25%" align="center"><img src="images/basealt.png" alt=""/></th>
+      <th scope="col" width="75%"><p>Тел.: +7 (495) 123-47-99<br>
+                    	mail: org@basealt.ru<br>
+                   	 	Москва, ул. Бутырская, д. 75<br>
+                      	ИНН: 7714350892</p></th>
+    </tr>
+  </tbody>
+</table>
 				<table width="80%" border="0" align="center">
   <tbody>
     <tr>
