--- a/example.html
+++ b/example.html
@@ -59,9 +59,9 @@
 	      <div class="content">
 			     <blockquote>
     <p>&nbsp;</p>
-                   <p><a href="https://github.com/libdomain/libdomain-qt-sample" target="_blank">- Пример использования библиотеки libdomain совместно с фреймворком Qt</a></p>
-                   <p><a href="https://github.com/libdomain/libdomain-c-sample" target="_blank">- Пример использования библиотеки libdomain  на языке C</a></p>
-                   <p><a href="https://github.com/libdomain/libdomain-powershell-sample" target="_blank">- Пример использования библиотеки libdomain  на языке C#</a></p>
+                   <p><a href="example-qt.html" target="_blank">- Пример использования библиотеки libdomain совместно с фреймворком Qt</a></p>
+                   <p><a href="example-c.html" target="_blank">- Пример использования библиотеки libdomain в программе на языке C</a></p>
+                   <p><a href="example-ps.html" target="_blank">- Пример использования библиотеки libdomain совместно с PowerShell</a></p>
                    <p>&nbsp;</p>
           </blockquote></div>  
 		 
