--- a/license.html
+++ b/license.html
@@ -33,7 +33,7 @@
         <li class="nav-item opacity-75"> <a class="nav-link" href="news.html"><span>Новости</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="https://github.com/libdomain/libdomain" target="_blank"><span>Исходный&nbspкод</span></a></li>
         <li class="nav-item opacity-75"> <a class="nav-link" href="example.html"><span>Примеры&nbspиспользования</span></a></li>
-	    <li class="nav-item opacity-75"> <a class="nav-link" href="https://libdomain.github.io/libdomain/files.html" target="_blank"><span>Документация</span></a></li>
+	    <li class="nav-item opacity-75"> <a class="nav-link" href="docs.html"><span>Документация</span></a></li>
         <li class="nav-item active"> <a class="nav-link"><span>Лицензия</span></a></li>
 		<li class="nav-item opacity-75"> <a class="nav-link" href="contact.html"><span>Контакты</span></a></li>
         <li class="nav-item translation-nav"> <a class="active" href="index.html"><img src="images/ru.svg" alt="Russian"></a><a href="english/index.html"><img src="images/en.svg" alt="English"></a></li>
