--- a/english/example.html
+++ b/english/example.html
@@ -59,10 +59,10 @@
 	      <div class="content">
 			     <blockquote>
     <p>&nbsp;</p>
-                   <p><a href="https://github.com/libdomain/libdomain-qt-sample" target="_blank">- Example of using the libdomain library with the Qt framework</a></p>
-                   <p><a href="https://github.com/libdomain/libdomain-c-sample" target="_blank">- Example of using the libdomain library in C&nbsp;</a></p>
-                   <p><a href="https://github.com/libdomain/libdomain-powershell-sample" target="_blank">- Example of using the libdomain library in C#</a></p>
-                   <p>&nbsp;</p>
+                   <p><a href="example-qt.html">- Example of using the libdomain library with the Qt framework</a></p>
+                   <p><a href="example-c.html">- Example of using the libdomain library in C</a></p>
+                   <p><a href="example-ps.html">- Example of using the libdomain library with PowerShell</a></p>
+
           </blockquote></div>  
 		 
 		</div>
